--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://cloud.esmerelda.tech/Branding/Assets/Esmerelda/Logo.png" />
+		<meta name="title" content="Esmerelda"/>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
